--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -29,23 +29,23 @@
               <ul class="z-50 flex font-semibold text-xl lg:flex-row flex-col lg:items-center lg:gap-[4vw] gap-8">
                   <li class=" transition-all duration-200 ease-in-out p-2">
                       <a class="text-slate-800  transition-all ease-in"
-                          href="./index.html">Home</a>
+                          href="../index.html">Home</a>
                   </li>
                   <li class=" transition-all duration-200 ease-in-out p-2">
                       <a class="text-slate-800   transition-al  ease-in"
-                          href="./Pages/about.html">About</a>
+                          href="./about.html">About</a>
                   </li>
                   <li class=" transition-all duration-200 ease-in-out p-2">
                       <a class="text-slate-800  transition-all ease-in"
-                          href="./Pages/activities.html">Activities</a>
+                          href="./activities.html">Activities</a>
                   </li>
                   <li class=" transition-all duration-200 ease-in-out p-2">
                       <a class="text-slate-800  transition-all ease-in"
-                          href="./Pages/gallery.html">Gallery</a>
+                          href="./gallery.html">Gallery</a>
                   </li>
                   <li class=" transition-all duration-200 ease-in-out p-2">
                       <a class="text-slate-800  transition-all ease-in"
-                          href="./Pages/contact.html">Contact</a>
+                          href="./contact.html">Contact</a>
                   </li>
               </ul>
           </div>
