--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -32,13 +32,13 @@
                         <a class="text-slate-800   transition-al  ease-in" href="./about.html">About</a>
                     </li>
                     <li class="transition-all duration-200 ease-in-out p-2 ">
-                        <a class="text-slate-800  transition-all ease-in" href="#">Activities</a>
+                        <a class="text-slate-800  transition-all ease-in" href="./activities.html">Activities</a>
                     </li>
                     <li class="transition-all duration-200 ease-in-out p-2 ">
                         <a class="text-slate-800  transition-all ease-in" href="./gallery.html">Gallery</a>
                     </li>
                     <li class="transition-all duration-200 ease-in-out p-2 ">
-                        <a class="text-slate-800  transition-all ease-in" href="contact.html">Contact</a>
+                        <a class="text-slate-800  transition-all ease-in" href="./contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
