--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -51,7 +51,7 @@
     <!-- EMBED MAP  -->
     <div class="absolute z-[-1] top-0 left-0 right-0 bottom-0"><img src="../Graphics/Gradient.png" alt=""></div>
     <section class="text-slate-600 body-font  relative">
-        <div class="absolute z-[-1] opacity-80 inset-0 bg-gray-300">
+        <div class="absolute inset-0 bg-gray-300">
             <iframe width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0" title="map"
                 scrolling="no"
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3321.4825490054013!2d-7.452029418765826!3d33.64465647035059!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xda7cb89d303dc37%3A0x7302fcec02a52895!2sISTA%20Zenata!5e0!3m2!1sen!2sma!4v1698178586923!5m2!1sen!2sma"
