--- a/Pages/activities.html
+++ b/Pages/activities.html
@@ -106,9 +106,9 @@
         <section class="h-full">
             <div class="container mx-auto justify-center items-center h-full text-slate-800 ">
                 <div class="text-4xl uppercase py-10 font-black text-center">SUBMIT FORM<span class="text-[#00D897]">.</span></div>
-                    <div class="flex flex-col lg:flex lg:flex-col gap-10 lg:flex lg:flex-row  justify-center items-center container mx-auto bg-[#BFCCD3] py-20 lg:py-20 px-20">
-                        <div class="mb-1">
-                            <input type="text" id="large-input" placeholder="Name" class="block w-[400px] lg:w-[600px] p-4 text-gray-900 border border-gray-300  bg-slate-100 sm:text-md">
+                    <div class="flex flex-col gap-10 justify-center items-center container mx-auto bg-[#BFCCD3] py-20 lg:py-20 px-20">
+                        <div class="">
+                            <input type="text" id="large-input" placeholder="Name"  class="block w-[400px] lg:w-[600px] p-4 text-gray-900 border border-gray-300 bg-slate-100 sm:text-md ">
                         </div>
                         <div>
                             <input type="text" id="large-input" placeholder="Class" class="block w-[400px] lg:w-[600px] p-4 text-gray-900 border border-gray-300 bg-slate-100 sm:text-md ">
