--- a/Pages/activities.html
+++ b/Pages/activities.html
@@ -57,7 +57,7 @@
         </header>
 
         <section class="py-10">
-            <div class="absolute z-[0] top-0 left-0 right-0 bottom-0"><img src="../Graphics/Gradient.png" alt=""></div>
+            <div class="absolute z-[0] top-0 left-0 right-0"><img src="../Graphics/Gradient.png" alt=""></div>
             <div class="container mx-auto ">
                 <div class="z-50 relative text-center text-4xl font-black text-slate-800 ">ACTIVITIES<span class="text-[#00D897]">.</spa>
                 </div>
