fix some issues and updates

--- a/Pages/activities.html
+++ b/Pages/activities.html
@@ -69,33 +69,33 @@
     <div class="flex py-10 items-center justify-center">
         <div class="grid grid-cols-1 gap-5  lg:grid-cols-3">
             <!-- chess -->
-          <div class="group relative cursor-pointer items-center justify-center overflow-hidden transition-shadow hover:shadow-xl hover:shadow-black/30">
+          <div class="group relative cursor-pointer items-center justify-center overflow-hidden transition-shadow hover:shadow-xl hover:shadow-black/30 ">
             <div class="h-96 w-72">
               <img class="h-full w-full object-cover transition-transform duration-500 group-hover:rotate-3 group-hover:scale-125" src="../Images/activities/Chess.png" alt="" />
             </div>
             <div class="absolute inset-0 bg-gradient-to-b from-transparent via-transparent to-black group-hover:from-black/70 group-hover:via-black/60 group-hover:to-black/70"></div>
             <div class="absolute inset-0 flex translate-y-[60%] flex-col items-center justify-center px-9 text-center transition-all duration-500 group-hover:translate-y-0">
-              <h1 class="font-dmserif text-3xl font-bold uppercase text-white">chess</h1>
+              <h1 class="font-dmserif text-3xl font-extrabold uppercase text-white">chess</h1>
             </div>
           </div>
           <!-- soccer -->
-          <div class="group relative cursor-pointer items-center justify-center overflow-hidden transition-shadow hover:shadow-xl hover:shadow-black/30">
+          <div class="group relative cursor-pointer items-center justify-center overflow-hidden transition-shadow hover:shadow-xl hover:shadow-black/30 ">
             <div class="h-96 w-72">
               <img class="h-full w-full object-cover transition-transform duration-500 group-hover:rotate-3 group-hover:scale-125" src="../Images/activities/soccer.png" alt="" />
             </div>
             <div class="absolute inset-0 bg-gradient-to-b from-transparent via-transparent to-black group-hover:from-black/70 group-hover:via-black/60 group-hover:to-black/70"></div>
             <div class="absolute inset-0 flex translate-y-[60%] flex-col items-center justify-center px-9 text-center transition-all duration-500 group-hover:translate-y-0">
-              <h1 class="font-dmserif text-3xl font-bold uppercase text-white">Soccer</h1>
+              <h1 class="font-dmserif text-3xl font-extrabold uppercase text-white">Soccer</h1>
             </div>
           </div>
           <!-- paint -->
-          <div class="group relative cursor-pointer items-center justify-center overflow-hidden transition-shadow hover:shadow-xl hover:shadow-black/30">
+          <div class="group relative cursor-pointer items-center justify-center overflow-hidden transition-shadow hover:shadow-xl hover:shadow-black/30 ">
             <div class="h-96 w-72">
               <img class="h-full w-full object-cover transition-transform duration-500 group-hover:rotate-3 group-hover:scale-125" src="../Images/activities/paint.png" alt="" />
             </div>
             <div class="absolute inset-0 bg-gradient-to-b from-transparent via-transparent to-black group-hover:from-black/70 group-hover:via-black/60 group-hover:to-black/70"></div>
             <div class="absolute inset-0 flex translate-y-[60%] flex-col items-center justify-center px-9 text-center transition-all duration-500 group-hover:translate-y-0">
-              <h1 class="font-dmserif text-3xl font-bold uppercase text-white">Paint</h1>
+              <h1 class="font-dmserif text-3xl font-extrabold uppercase text-white">Paint</h1>
             </div>
           </div>
         </div>
@@ -114,13 +114,13 @@
                             <input type="text" id="large-input" placeholder="Class" class="block w-[400px] lg:w-[600px] p-4 text-gray-900 border border-gray-300 bg-slate-100 sm:text-md ">
                         </div>
                         <div class="mx-auto w-full flex flex-row items-center justify-center lg:space-x-24 space-x-12">
-                        <button class="bg-gray-600 text-white uppercase font-bold shadow-2xl py-4 px-8 border-4 focus:ring-2 ring-gray-600">
+                        <button class="bg-gray-600 text-white uppercase font-bold shadow-2xl py-4 px-8 border-4 focus:ring-2 ring-gray-600 drop-shadow-lg">
                             Chess
                         </button>
-                        <button class="bg-green-500 text-white uppercase font-bold shadow-2xl py-4 px-8 border-4 focus:ring-2 ring-green-500">
+                        <button class="bg-green-500 text-white uppercase font-bold shadow-2xl py-4 px-8 border-4 focus:ring-2 ring-green-500 drop-shadow-lg">
                             Soccer
                         </button>
-                        <button class="bg-orange-600 text-white uppercase font-bold shadow-2xl py-4 px-8 border-4 focus:ring-2 ring-orange-600">
+                        <button class="bg-red-600 text-white uppercase font-bold shadow-2xl py-4 px-8 border-4 focus:ring-2 ring-red-600 drop-shadow-lg">
                             Paint
                         </button>
                         </div>
