--- a/Pages/activities.html
+++ b/Pages/activities.html
@@ -59,15 +59,15 @@
         <section class="py-10">
             <div class="absolute z-[0] top-0 left-0 right-0"><img src="../Graphics/Gradient.png" alt=""></div>
             <div class="container mx-auto ">
-                <div class="z-50 relative text-center text-4xl font-black text-slate-800 ">ACTIVITIES<span class="text-[#00D897]">.</spa>
+                <div class="z-0 relative text-center text-4xl font-black text-slate-800 ">ACTIVITIES<span class="text-[#00D897]">.</spa>
                 </div>
             </div>
             </div>
         </section>
 
     <!-- chess -->
-    <div class="flex py-10 items-center justify-center">
-        <div class="grid grid-cols-1 gap-5  lg:grid-cols-3">
+    <div class="flex py-10 items-center justify-center px-5">
+        <div class="grid grid-cols-1 gap-5  md:grid-cols-3">
             <!-- chess -->
           <div class="group relative cursor-pointer items-center justify-center overflow-hidden transition-shadow hover:shadow-xl hover:shadow-black/30 ">
             <div class="h-96 w-72">
