--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 </head>
 
 <body class="gradient_bg bg-slate-200 overflow-x-hidden">
+    <!-- loading page section -->
+  <section id="preloader" class="bg-slate-50 bg-opacity-70 backdrop-blur-xl preloader mx-auto flex justify-center items-center">
+    <div class="loader loader_bubble"></div>
+  </section>
+
+
     <!-- Navigation Bar -->
     <header class="z-50 px-5 container mx-auto transition-all duration-300 ease-in-out">
         <nav class=" z-50 flex justify-between items-center py-8 mx-auto">
@@ -58,7 +64,7 @@
       <div class="absolute z-[0] top-0 left-0 right-0 bottom-0"><img src="./Graphics/Gradient.png" alt=""></div>
       <div class="absolute z-[0] top-0 -bottom-full right-0 left-0 bg-slate-200 bg-opacity-70 w-full md:hidden"></div>
       <div class="container mx-auto flex flex-col justify-center items-start space-y-14 w-full">
-        <div class="w-full relative z-[1] px-10 md:px-0 md:w-2/5 text-center mx-auto md:mx-0 md:text-left text-6xl md:text-8xl font-extrabold text-slate-800">Unlock Your Future at ISTA ZENATA.</div>
+        <div class="w-full relative z-[1] px-10 md:px-0 md:w-2/5 text-center mx-auto md:mx-0 md:text-left text-6xl md:text-8xl font-extrabold text-slate-800">Unlock Your Future at <br>ISTA ZENATA</div>
         <div class="w-1/2 relative z-[1] text-center mx-auto md:mx-0 md:text-left font-semibold text-2xl text-slate-500">Explore Our Cutting-Edge Programs and Ignite Your Career Journey Today!</div>
         <div class="mx-auto md:mx-0 h-16 relative z-[1] bg-slate-100 flex p-2 w-2/3 justify-between shadow-xl"><input class="bg-transparent pl-4 w-[50%] md:w-2/3 outline-none"  type="text" placeholder="EMAIL ADRESS"><button class="bg-[#00D897] px-5 font-bold text-slate-800 hover:bg-[#48c6a0] md:hover:tracking-[0.2em] transition-all duration-200 ease-in-out text-sm md:text-lg">Get Started</button></div>
       </div>
