--- a/Pages/about.html
+++ b/Pages/about.html
@@ -53,13 +53,13 @@
     <section class="py-20">
         <div class="absolute z-[0] top-0 left-0 right-0 bottom-0"><img src="../Graphics/Gradient.png" alt=""></div>
         <div class="container mx-auto ">
-            <div class="z-50 relative text-center text-4xl font-black text-slate-800 ">About<span class="text-[#00D897]">.</spa>
+            <div class="z-0 relative text-center text-4xl font-black text-slate-800 ">About<span class="text-[#00D897]">.</spa>
             </div>
             <div class="flex flex-col space-y-10 lg:flex lg:flex-row  py-20 justify-center items-center gap-5">
-                <div class="z-50 lg:w-10/12 flex justify-center"><img height="215px" src="../Graphics/ofppt_logo.png"
+                <div class="z-0 lg:w-10/12 flex justify-center"><img height="215px" src="../Graphics/ofppt_logo.png"
                         alt=""></div>
                 <div
-                    class="z-50 w-11/12  lg:w-3/4 flex justify-center bg-gradient-to-r shadow-2xl shadow-[#3F3D564D] from-slate-300 p-10 text-xl lg:text-2xl text-slate-700 font-semibold">
+                    class="z-0 w-11/12  lg:w-3/4 flex justify-center bg-gradient-to-r shadow-2xl shadow-[#3F3D564D] from-slate-300 p-10 text-xl lg:text-2xl text-slate-700 font-semibold">
                     L'Office de la formation professionnelle et de la promotion du travail (OFPPT) est un opérateur
                     public en formation
                     professionnelle, couvrant le territoire marocain.</div>
@@ -380,7 +380,7 @@
                 to welcoming you to our community.</div>
             <div class="mx-auto"><a
                     class="bg-gradient-to-r  from-[#00D897] to-[#00D8974D] px-5 py-3 text-4xl font-black text-slate-800 uppercase hover:tracking-widest hover:scale-110 transition-all duration-300 ease-in shadow-lg shadow-[#00D8974D]   "
-                    href="/Pages/contact.html">
+                    href="../">
                     Contact Now</a>
             </div>
         </div>
