--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -289,7 +289,7 @@
   </section>
     <!-- Footer -->
 
-  <footer class="text-slate-600 body-font">
+  <footer class="text-slate-600 body-font bg-slate-300">
     <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
       <a class="flex title-font font-medium items-center md:justify-start justify-center text-slate-900">
               <div
