--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
     </section>
 
     <!-- Footer -->
- <footer class="text-slate-600 body-font">
+ <footer class="text-slate-600 bg-slate-300 body-font">
   <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
     <a class="flex title-font font-medium items-center md:justify-start justify-center text-slate-900">
             <div
